<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/constraint"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/contentContainer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/background"
        android:textColor="@color/textPrimary"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="6dp"
                android:layout_marginEnd="8dp"
                android:orientation="horizontal"
                android:gravity="center_vertical">

                <TextView
                    android:id="@+id/playerLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:importantForAccessibility="no"
                    android:text="@string/player_label"
                    android:textColor="@android:color/white" />

                <TextView
                    android:id="@+id/playerName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:textColor="@android:color/white" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/rerollsLeftText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"
                    android:text="@string/rerolls_left_default" />
            </LinearLayout>

            <GridLayout
                android:id="@+id/diceGrid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:columnCount="2"
                android:alignmentMode="alignMargins"
                android:rowOrderPreserved="true"
                android:padding="8dp"
                android:useDefaultMargins="true">

                <com.example.godicetest.views.DiceSet
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:title="@string/ones"
                    android:layout_column="0"
                    android:layout_row="0"
                    android:layout_columnWeight="1"
                    android:layout_columnSpan="1" />

                <com.example.godicetest.views.DiceSet
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:title="@string/twos"
                    android:layout_column="0"
                    android:layout_row="1"
                    android:layout_columnWeight="1"
                    android:layout_columnSpan="1" />

                <com.example.godicetest.views.DiceSet
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:title="@string/threes"
                    android:layout_column="0"
                    android:layout_row="2"
                    android:layout_columnWeight="1"
                    android:layout_columnSpan="1" />

                <com.example.godicetest.views.DiceSet
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:title="@string/fours"
                    android:layout_column="0"
                    android:layout_row="3"
                    android:layout_columnWeight="1"
                    android:layout_columnSpan="1" />

                <com.example.godicetest.views.DiceSet
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:title="@string/fives"
                    android:layout_column="0"
                    android:layout_row="4"
                    android:layout_columnWeight="1"
                    android:layout_columnSpan="1" />

                <com.example.godicetest.views.DiceSet
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:title="@string/sixes"
                    android:layout_column="0"
                    android:layout_row="5"
                    android:layout_columnWeight="1"
                    android:layout_columnSpan="1" />

                <com.example.godicetest.views.DiceSet
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:title="@string/three_of_a_kind"
                    android:layout_column="1"
                    android:layout_row="0"
                    android:layout_columnWeight="1"
                    android:layout_columnSpan="1" />

                <com.example.godicetest.views.DiceSet
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:title="@string/four_of_a_kind"
                    android:layout_column="1"
                    android:layout_row="1"
                    android:layout_columnWeight="1"
                    android:layout_columnSpan="1" />

                <com.example.godicetest.views.DiceSet
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:title="@string/full_House"
                    android:layout_column="1"
                    android:layout_row="2"
                    android:layout_columnWeight="1"
                    android:layout_columnSpan="1" />

                <com.example.godicetest.views.DiceSet
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:title="@string/small_Straight"
                    android:layout_column="1"
                    android:layout_row="3"
                    android:layout_columnWeight="1"
                    android:layout_columnSpan="1" />

                <com.example.godicetest.views.DiceSet
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:title="@string/large_Straight"
                    android:layout_column="1"
                    android:layout_row="4"
                    android:layout_columnWeight="1"
                    android:layout_columnSpan="1" />

                <com.example.godicetest.views.DiceSet
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:title="@string/yahtzee"
                    android:layout_column="1"
                    android:layout_row="5"
                    android:layout_columnWeight="1"
                    android:layout_columnSpan="1" />

                <com.example.godicetest.views.DiceSet
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:title="@string/chance"
                    android:layout_column="0"
                    android:layout_row="6"
                    android:layout_columnSpan="2" />

            </GridLayout>

            <TextView
                android:id="@+id/rollInfoText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="12dp"
                android:layout_marginBottom="4dp"
                android:gravity="center"
                android:text="@string/roll_all_dice_required_default"
                android:textColor="@android:color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/toRollLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:text="@string/turn_dice_label"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <com.example.godicetest.views.DiceSet
                android:id="@+id/turnDiceSet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="8dp" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
